# pinchy

./: .gitignore  Cargo.toml  MISSING-X86.md  README.md  org.pinchy.Service.conf  org.pinchy.Service.service  pinchy.service
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
lupa/: Cargo.toml
lupa/src/: app.rs  main.rs  tracker.rs  ui.rs
pinchy/: Cargo.toml  build.rs
pinchy-client/: Cargo.toml
pinchy-client/src/: lib.rs
pinchy-common/: Cargo.toml  build.rs
pinchy-common/src/: kernel_types.rs  lib.rs
pinchy-common/src/syscalls/: aarch64.rs  mod.rs  x86_64.rs
pinchy-ebpf/: Cargo.toml  build.rs
pinchy-ebpf/src/: basic_io.rs  filesystem.rs  ipc.rs  lib.rs  main.rs  memory.rs  network.rs  process.rs  scheduling.rs  security.rs  signal.rs  sync.rs  system.rs  time.rs  util.rs
pinchy/src/: client.rs  events.rs  format_helpers.rs  formatting.rs  ioctls-match.rsinc  ioctls.duplicates  ioctls.rs  main.rs  server.rs  shm_transport.rs  tracing.rs  util.rs
pinchy/src/events/: test.rs
pinchy/src/tests/: basic_io.rs  client.rs  filesystem.rs  ipc.rs  memory.rs  mod.rs  (+9 more)
pinchy/tests/: auto_quit.rs  common.rs  helper.rs  integration.rs
scripts/: gen-ioctl-requests-match  measure-command-efficiency.sh  measure-event-efficiency.sh  measure-find-efficiency.sh  migrate-ebpf-inplace.rs  migrate-ebpf-inplace.sh  migrate-events-inplace.rs  migrate-events-inplace.sh  migrate-tests-inplace.rs  migrate-tests-inplace.sh  validate-latency-and-efficiency.sh  virtme-script
uml-kernel/: build-kernel.sh  config-aarch64  config-x86_64  uml-test-runner.sh
